2006-07-29  Darin Adler  <darin@apple.com>

        - Removed tabs from these source files that still had them.
          We don't use them; that way source files look fine in editors
          that have tabs set to 8 spaces or to 4 spaces.
        - Removed allow-tabs Subversion property from the files too.

        * bindings/NP_jsobject.cpp:
        * bindings/c/c_utility.cpp:
        * bindings/jni/jni_runtime.cpp:
        * bindings/jni/jni_utility.cpp:
        * bindings/objc/objc_utility.mm:
        * bindings/runtime.cpp:
        * bindings/runtime_method.cpp:
        * bindings/testbindings.cpp:
        * bindings/testbindings.mm:
        * kjs/date_object.cpp:
        * kjs/function.cpp:
        * kjs/list.cpp:
        * kjs/nodes.cpp:
        * kjs/nodes.h:
        * kjs/string_object.cpp:
        * kjs/ustring.cpp:

2006-07-29  Darin Adler  <darin@apple.com>

        * tests/mozilla/expected.html: Update test results now that regress-185165.js
        is succeeding. I suspect Anders fix for bug 4620655 is the reason.

2006-07-29  Sam Weinig  <sam.weinig@gmail.com>

        Reviewed by Darin.

        - patch for http://bugzilla.opendarwin.org/show_bug.cgi?id=10080
          Adopt pedantic changes from the Unity project to improve 
          cross-compiler compatibility

          Changes include:
          * Removing trailing semicolon from namespace braces.
          * Removing trailing comma from last enum declaration.
          * Updating to match style guidelines.
          * Adding missing newline to the end of the file.
          * Turning on gcc warning for missing newline at the end of a source file
            (GCC_WARN_ABOUT_MISSING_NEWLINE in Xcode, -Wnewline in gcc).
          * Alphabetical sorting of Xcode source list files. 
          * Replace use of non-portable variable-size array with Vector.
          * Use C-style comments instead of C++ comments in files that might
            be included by either C or C++ files.
